[project]
name = "whatsapp-advance-agent"
version = "0.1.0"
description = "Advanced WhatsApp Bot with AI capabilities using Meta Business API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.101.0",
    "python-dotenv>=1.1.1",
    "whatsapp-chatgpt-python>=1.0.0",
    "requests>=2.31.0",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
]
